RESOLVED FIXED89058
DFG should be able to set watchpoints on structure transitions in the method check prototype chain
https://bugs.webkit.org/show_bug.cgi?id=89058
Summary DFG should be able to set watchpoints on structure transitions in the method ...
Filip Pizlo
Reported 2012-06-13 20:44:05 PDT
Patch forthcoming.
Attachments
work in progress (28.81 KB, patch)
2012-06-13 20:49 PDT, Filip Pizlo
webkit-ews: commit-queue-
the patch (30.23 KB, patch)
2012-06-15 12:36 PDT, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-06-13 20:49:41 PDT
Created attachment 147476 [details] work in progress It looks like it works but I need to test it a lot more. I also need to decide whether or not it would be good to broaden the scope of this bug, and just find all of the places that can take advantage of watchpoints in one go.
WebKit Review Bot
Comment 2 2012-06-13 20:52:43 PDT
Attachment 147476 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/bytecode/Watchpoint.h:122: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Source/JavaScriptCore/bytecode/Watchpoint.h:127: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 2 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Early Warning System Bot
Comment 3 2012-06-13 21:03:03 PDT
Comment on attachment 147476 [details] work in progress Attachment 147476 [details] did not pass qt-wk2-ews (qt): Output: http://queues.webkit.org/results/12964027
Early Warning System Bot
Comment 4 2012-06-13 21:06:30 PDT
Comment on attachment 147476 [details] work in progress Attachment 147476 [details] did not pass qt-ews (qt): Output: http://queues.webkit.org/results/12950583
Filip Pizlo
Comment 5 2012-06-15 12:36:24 PDT
Created attachment 147877 [details] the patch
WebKit Review Bot
Comment 6 2012-06-15 12:39:02 PDT
Attachment 147877 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/bytecode/Watchpoint.h:122: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Source/JavaScriptCore/bytecode/Watchpoint.h:127: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 2 in 23 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 7 2012-06-15 15:15:34 PDT
Filip Pizlo
Comment 8 2012-06-15 15:22:04 PDT
Fix to assertions landed in http://trac.webkit.org/changeset/120500
Note You need to log in before you can comment on or make changes to this bug.