DFG should be able to set watchpoints on structure transitions in the method check prototype chain https://bugs.webkit.org/show_bug.cgi?id=89058

Adding the same assertion to 32-bit that I added to 64-bit. This change
does not affect correctness but it's a good thing for assertion coverage.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/107112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120500 268f45cc-cd09-0410-ab3c-d52691b4dbfc